--- a/DBReview/2. Apex PROD.ipynb
+++ b/DBReview/2. Apex PROD.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -74,13 +74,13 @@
       "\n",
       "\u001b[32;1mRegion   \u001b[0m\u001b[32;1m TableName                 \u001b[0m\u001b[32;1m TableBackup\u001b[0m\u001b[32;1m CreationDateTime     \u001b[0m\u001b[32;1m ItemCount\u001b[0m\u001b[32;1m TableSizeMB\u001b[0m\n",
       "\u001b[32;1m------   \u001b[0m \u001b[32;1m---------                 \u001b[0m \u001b[32;1m-----------\u001b[0m \u001b[32;1m----------------     \u001b[0m \u001b[32;1m---------\u001b[0m \u001b[32;1m-----------\u001b[0m\n",
-      "eu-west-2 prod-accommodation               False 10/20/2023 1:11:55 PM    151626 28 MB\n",
+      "eu-west-2 prod-accommodation               False 10/20/2023 1:11:55 PM    151632 28 MB\n",
       "eu-west-2 prod-apex_product_extras         False 2/2/2023 4:43:28 PM     5072420 993 MB\n",
       "eu-west-2 prod-apex_translations            True 5/16/2024 10:06:42 AM      7743 1 MB\n",
-      "eu-west-2 prod-availability                False 10/20/2023 1:11:55 PM   3886143 2619 MB\n",
-      "eu-west-2 prod-bookability                 False 10/20/2023 1:11:55 PM 117214835 31105 MB\n",
+      "eu-west-2 prod-availability                False 10/20/2023 1:11:55 PM   3886385 2619 MB\n",
+      "eu-west-2 prod-bookability                 False 10/20/2023 1:11:55 PM 117222287 31100 MB\n",
       "eu-west-2 prod-novasol_currencies          False 2/2/2023 4:43:28 PM          38 0 MB\n",
-      "eu-west-2 prod-novasol_product_cache       False 10/20/2023 1:11:55 PM    213460 195 MB\n",
+      "eu-west-2 prod-novasol_product_cache       False 10/20/2023 1:11:55 PM    213473 196 MB\n",
       "eu-west-2 terraform-locks                   True 7/8/2022 6:20:39 PM          89 0 MB\n",
       "\n"
      ]
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -122,13 +122,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[32;1mTableName             \u001b[0m\u001b[32;1m BackupName                    \u001b[0m\u001b[32;1m BackupCreationDateTime\u001b[0m\u001b[32;1m BackupStatus\u001b[0m\n",
-      "\u001b[32;1m---------             \u001b[0m \u001b[32;1m----------                    \u001b[0m \u001b[32;1m----------------------\u001b[0m \u001b[32;1m------------\u001b[0m\n",
-      "terraform-locks        terraform-locks-backup         7/11/2024 1:03:48 PM   AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP  7/12/2024 11:30:17 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP2 7/12/2024 11:36:29 AM  AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP3 7/13/2024 7:19:00 PM   AVAILABLE\n",
-      "prod-apex_translations prod-apex_translations_BACKUP4 7/14/2024 10:08:05 AM  AVAILABLE\n",
+      "\u001b[32;1mTableName      \u001b[0m\u001b[32;1m BackupName            \u001b[0m\u001b[32;1m BackupCreationDateTime\u001b[0m\u001b[32;1m BackupStatus\u001b[0m\n",
+      "\u001b[32;1m---------      \u001b[0m \u001b[32;1m----------            \u001b[0m \u001b[32;1m----------------------\u001b[0m \u001b[32;1m------------\u001b[0m\n",
+      "terraform-locks terraform-locks-backup 7/11/2024 1:03:48 PM   AVAILABLE\n",
       "\n"
      ]
     }
@@ -148,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -157,10 +153,28 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
+      "                         p/01721035568653-be782f73\n",
+      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/15/2024 9:26:08 AM\n",
+      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
+      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations-Backup1\n",
+      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
+      "\u001b[32;1mBackupStatus           : \u001b[0mCREATING\n",
+      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# $Backup = New-DDBBackup -TableName 'prod-apex_translations' -ProfileName DevOps-Apex-PROD -BackupName 'prod-apex_translations_BACKUP4'\n",
-    "# $Backup"
+    "$Table = 'prod-apex_translations'\n",
+    "$Backup = New-DDBBackup -TableName $Table -ProfileName DevOps-Apex-PROD -BackupName \"$Table-Backup1\"\n",
+    "$Backup"
    ]
   },
   {
@@ -172,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -181,7 +195,24 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mBackupArn              : \u001b[0marn:aws:dynamodb:eu-west-2:463854377715:table/prod-apex_translations/backu\n",
+      "                         p/01721035568653-be782f73\n",
+      "\u001b[32;1mBackupCreationDateTime : \u001b[0m7/15/2024 9:26:08 AM\n",
+      "\u001b[32;1mBackupExpiryDateTime   : \u001b[0m1/1/0001 12:00:00 AM\n",
+      "\u001b[32;1mBackupName             : \u001b[0mprod-apex_translations-Backup1\n",
+      "\u001b[32;1mBackupSizeBytes        : \u001b[0m735797\n",
+      "\u001b[32;1mBackupStatus           : \u001b[0mAVAILABLE\n",
+      "\u001b[32;1mBackupType             : \u001b[0mUSER\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "$Bk = Get-DDBBackup -BackupArn $Backup.BackupArn -ProfileName DevOps-Apex-PROD\n",
     "$Bk.BackupDetails"
@@ -196,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -205,7 +236,20 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32;1mTableName             \u001b[0m\u001b[32;1m BackupName                    \u001b[0m\u001b[32;1m BackupCreationDateTime\u001b[0m\u001b[32;1m BackupStatus\u001b[0m\n",
+      "\u001b[32;1m---------             \u001b[0m \u001b[32;1m----------                    \u001b[0m \u001b[32;1m----------------------\u001b[0m \u001b[32;1m------------\u001b[0m\n",
+      "terraform-locks        terraform-locks-backup         7/11/2024 1:03:48 PM   AVAILABLE\n",
+      "prod-apex_translations prod-apex_translations-Backup1 7/15/2024 9:26:08 AM   AVAILABLE\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "$BackupsList    = Get-DDBBackupList -ProfileName $Profiles.ProfileName \n",
     "$Columns        = 'TableName', 'BackupName', 'BackupCreationDateTime',   'BackupStatus'#, 'BackupSizeBytes', 'BackupType' \n",
